--- a/index.html
+++ b/index.html
@@ -9,6 +9,72 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+    <script>
+      vkBridge.send('VKWebAppInit');
+          vkBridge.send('VKWebAppCheckNativeAds', { ad_format: 'interstitial'});
+          vkBridge.send('VKWebAppShowBannerAd', {
+              banner_location: 'bottom'
+              })
+              .then((data) => { 
+                if (data.result) {
+                  // Баннерная реклама отобразилась
+                }
+              })
+              .catch((error) => {
+                // Ошибка
+                console.log(error);
+              });
+    </script>
+    
+    <script>
+      function Musel ()
+      {
+        vkBridge.subscribe((e) => {
+            if (e.detail.type === 'VKWebAppViewHide') {
+              // Действия при сворачивании или 
+              // переключении из игры или мини-приложения
+              MyGameInstance.SendMessage('mus', 'JsMus', 5);
+            }
+          });
+      }
+            function FromUnityToJs ()   // функция вызывается из Unity
+      {
+        vkBridge.send('VKWebAppShowNativeAds', {
+          ad_format: 'interstitial' /* Тип рекламы */
+          })
+          .then( (data) => { 
+            if (data.result) {
+              // Реклама была показана
+            } else {
+              // Ошибка
+            }
+          })
+          .catch((error) => { console.log(error); });
+      }
+          function  Podel()
+          {
+              vkBridge.send('VKWebAppShare', {
+                link: 'https://vk.com/app51981003'
+                })
+                .then((data) => { 
+                  if (data.result) {
+                    // Запись размещена
+                  }
+                })
+                .catch((error) => {
+                  // Ошибка
+                  console.log(error);
+                });
+          }
+      jQuery(document).ready(function($) // страница прогружена
+       {
+
+
+
+      });
+    </script>
     <div id="unity-container">
       <canvas id="unity-canvas" width=360 height=640 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
